syntax = "proto3";

import "types.proto";

import "google/protobuf/wrappers.proto";

package okts.cmds;

//////////////////////////////////////////////////////

message IndexRequest {
  string name  = 1;
  int64  index = 2;
}

//////////////////////////////////////////////////////

message InsertRequest {
  enum Position {
    BEFORE = 0;
    AFTER  = 1;
  }

  string   name     = 1;
  Position position = 2;
  string   pivot    = 3;
  string   value    = 4;
}

message InsertReply {
  ResultInfo info = 1;
  int64      size = 2;
}

//////////////////////////////////////////////////////

message LengthRequest {
  string name = 1;
}

message LengthReply {
  ResultInfo info  = 1;
  uint64     value = 2;
}

//////////////////////////////////////////////////////

message MoveRequest {
  enum Direction {
    LEFT  = 0;
    RIGHT = 1;
  }

  string source_name              = 1;
  string destination_name         = 2;
  Direction source_direction      = 3;
  Direction destination_direction = 4;
}

//////////////////////////////////////////////////////

message PopFrontRequest {
  string                      name  = 1;
  google.protobuf.UInt32Value count = 2;
}

message PopFrontReply {
  ResultInfo      info  = 1;
  repeated string value = 2;
}

//////////////////////////////////////////////////////

message PushRequest {
  string name            = 1;
  repeated string values = 2;
}

message PushReply {
  ResultInfo info = 1;
  uint64     size = 2;
}

//////////////////////////////////////////////////////

message GetValueRequest {
  string name = 1;
}

message GetValueReply {
  ResultInfo info  = 1;
  string     value = 2;
}

//////////////////////////////////////////////////////

message RangeRequest {
  string name  = 1;
  int64  start = 2;
  int64  stop  = 3;
}

message RangeReply {
  ResultInfo      info   = 1;
  repeated string values = 2;
}

//////////////////////////////////////////////////////

message RemoveRequest {
  string name  = 1;
  int64  count = 2;
  string value = 3;
}

message RemoveReply {
  ResultInfo info    = 1;
  int64      removed = 2;
}

//////////////////////////////////////////////////////

message SetRequest {
  string name  = 1;
  int64  index = 2;
  string value = 3;
}

message SetReply {
  ResultInfo info = 1;
}

//////////////////////////////////////////////////////

message TrimRequest {
  string name  = 1;
  int64  start = 2;
  int64  stop  = 3;
}

message TrimReply {
  ResultInfo info = 1;
}

//////////////////////////////////////////////////////

message PopBackRequest {
  string                      name  = 1;
  google.protobuf.UInt32Value count = 2;
}

message PopBackReply {
  ResultInfo      info  = 1;
  repeated string value = 2;
}
